--- a/combine_sp.html
+++ b/combine_sp.html
@@ -94,7 +94,8 @@ const N = colors.length;
 let pixelSize=8, speed=1, mode='spiral', time=0;
 const pixelSizes=[4,8,12,16]; let pi=1;
 const speeds=[0.5,1,2]; let si=1;
-const modes=['spiral','rings','vortex']; let mi=0;
+const modes=['spiral','rings','vortex','random']; let mi=0;
+const randomCycleDuration = 300; // frames per mode before transitioning
 
 // Dance presets: { scale, rotation, bounceY, bounceX, freqMult }
 const dancePresets = [
@@ -141,46 +142,63 @@ function draw(){
     // Reconstruct angle in 0..1 range using atan2, then use trig for color
     const ang = Math.atan2(dy, dx); // -PI to PI
 
-    let v;
+    // Compute v for each mode
+    const vSpiral = 1 * ang / (Math.PI * 2) + dist * 0.3 / maxR - t * 0.008 * speed
+      + Math.sin(dist * 0.06 - t * 0.012 * speed) * 0.08;
+    const vRings = dist / (maxR * 0.12) - t * 0.025 * speed
+      + Math.sin(ang * 8 + t * 0.02 * speed) * 0.01;
+    const vVortex = 3 * ang / (Math.PI * 2) + dist * 0.8 / maxR - t * 0.012 * speed
+      + Math.sin(dist * 0.1 + t * 0.02) * 0.06
+      + Math.cos(ang * 2 - t * 0.015) * 0.04;
 
-    if(mode==='spiral'){
-      // Key fix: use the number of spiral arms to ensure the angle
-      // contribution wraps cleanly. With 1 arm, angle/2PI goes 0..1
-      // and dist contribution makes it spiral outward.
-      // The color function uses sin/cos so the value wraps continuously.
-      const arms = 1;
-      const spiralTightness = 0.3;
-      v = arms * ang / (Math.PI * 2) + dist * spiralTightness / maxR - t * 0.008 * speed;
-      v += Math.sin(dist * 0.06 - t * 0.012 * speed) * 0.08;
-    } else if(mode==='rings'){
-      v = dist / (maxR * 0.12) - t * 0.025 * speed;
-      v += Math.sin(ang * 8 + t * 0.02 * speed) * 0.01;
-    } else {
-      const arms = 3;
-      v = arms * ang / (Math.PI * 2) + dist * 0.8 / maxR - t * 0.012 * speed;
-      v += Math.sin(dist * 0.1 + t * 0.02) * 0.06;
-      v += Math.cos(ang * 2 - t * 0.015) * 0.04;
+    let v;
+    if(mode==='spiral') v = vSpiral;
+    else if(mode==='rings') v = vRings;
+    else if(mode==='vortex') v = vVortex;
+
+    // Noise for organic tie-dye texture
+    const noise = Math.sin(x * 0.7 + y * 1.3) * 0.015 + Math.sin(x * 1.1 - y * 0.9) * 0.01;
+    const bright = 0.85 + 0.15 * Math.sin(dist * 0.05 + t * 0.01);
+
+    // Helper: convert a v value to final RGB
+    function vToColor(val) {
+      val += noise;
+      const phase = val * Math.PI * 2;
+      const idx_s = ((Math.atan2(Math.sin(phase), Math.cos(phase)) / (Math.PI * 2)) + 1.0) % 1.0;
+      const pos = idx_s * N;
+      const ci = Math.floor(pos);
+      const cf = pos - ci;
+      const c1 = colors[ci % N], c2 = colors[(ci + 1) % N];
+      return [
+        Math.min(255, (c1[0]+(c2[0]-c1[0])*cf) * bright),
+        Math.min(255, (c1[1]+(c2[1]-c1[1])*cf) * bright),
+        Math.min(255, (c1[2]+(c2[2]-c1[2])*cf) * bright)
+      ];
     }
 
-    // Subtle noise for organic tie-dye texture
-    v += Math.sin(x * 0.7 + y * 1.3) * 0.015 + Math.sin(x * 1.1 - y * 0.9) * 0.01;
+    let r, g, b;
+    if(mode==='random'){
+      // Blend final colors (not raw v) to avoid atan2 seam artifacts
+      const allV = [vSpiral, vRings, vVortex];
+      const cycle = t * speed / randomCycleDuration;
+      const fromIdx = Math.floor(cycle) % 3;
+      const toIdx = (fromIdx + 1) % 3;
+      let blend = (cycle % 1);
+      blend = blend * blend * (3 - 2 * blend);
+      const cFrom = vToColor(allV[fromIdx]);
+      const cTo = vToColor(allV[toIdx]);
+      r = cFrom[0] * (1 - blend) + cTo[0] * blend;
+      g = cFrom[1] * (1 - blend) + cTo[1] * blend;
+      b = cFrom[2] * (1 - blend) + cTo[2] * blend;
+    } else {
+      const c = vToColor(v);
+      r = c[0]; g = c[1]; b = c[2];
+    }
 
-    // Convert value to color using trig to avoid seam
-    const phase = v * Math.PI * 2;
-    const idx_smooth = ((Math.atan2(Math.sin(phase), Math.cos(phase)) / (Math.PI * 2)) + 1.0) % 1.0;
-    const pos = idx_smooth * N;
-    const ci = Math.floor(pos);
-    const cf = pos - ci;
-    const c1 = colors[ci % N], c2 = colors[(ci + 1) % N];
-    const r = c1[0]+(c2[0]-c1[0])*cf;
-    const g = c1[1]+(c2[1]-c1[1])*cf;
-    const b = c1[2]+(c2[2]-c1[2])*cf;
-
-    const bright = 0.85 + 0.15 * Math.sin(dist * 0.05 + t * 0.01);
     const p = (y * w + x) * 4;
-    d[p]   = Math.min(255, r * bright);
-    d[p+1] = Math.min(255, g * bright);
-    d[p+2] = Math.min(255, b * bright);
+    d[p]   = r;
+    d[p+1] = g;
+    d[p+2] = b;
     d[p+3] = 255;
   }
 
@@ -210,7 +228,7 @@ function toggleSpeed(){
 }
 function toggleMode(){
   mi=(mi+1)%modes.length; mode=modes[mi];
-  document.getElementById('modeBtn').textContent='Mode: '+['Spiral','Rings','Vortex'][mi];
+  document.getElementById('modeBtn').textContent='Mode: '+['Spiral','Rings','Vortex','Random'][mi];
 }
 function toggleDance(){
   di=(di+1)%dancePresets.length; dance=dancePresets[di];
