--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@ const library = {
     { file: "tracks/RADWIMPS - movie ver Official Music Video.mp3", title: "RADWIMPS - Movie Ver" },
     { file: "tracks/stay with me.mp3", title: "Stay With Me" },
     { file: "tracks/the peggiesMusic Video.mp3", title: "The Peggies" },
-    { file: "tracks/japan jazz.mp3", title: "Japan Jazz" },
+    { file: "tracks/japan jazz.flac", title: "Japan Jazz" },
   ],
   albums: [
     {
